[gd_scene load_steps=4 format=3 uid="uid://4uee0ojyk018"]

[ext_resource type="Script" path="res://interface/pause_menu.gd" id="1_t2nch"]
[ext_resource type="Shortcut" uid="uid://d1asuhonc8ukp" path="res://interface/shortcuts/pause.tres" id="2_dbemu"]
[ext_resource type="Shortcut" uid="uid://fsxdfosrfpor" path="res://interface/shortcuts/restart.tres" id="2_qhbhy"]

[node name="PauseMenu" type="PanelContainer"]
process_mode = 2
visible = false
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_t2nch")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="ScoreText" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Best Score
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreSeparator" type="HSeparator" parent="VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
shortcut = ExtResource("2_qhbhy")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="ContinueSeparator" type="HSeparator" parent="VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
shortcut = ExtResource("2_dbemu")
text = "Continue
"

[node name="TitleSeparator" type="HSeparator" parent="VBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="VBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBox/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBox/ContinueButton" to="." method="_on_continue_button_pressed"]
